--- a/pico_console/CMakeLists.txt
+++ b/pico_console/CMakeLists.txt
@@ -4,7 +4,8 @@ set(PICO_CYW43_SUPPORTED 1)
 
 cmake_minimum_required(VERSION 3.13)
 
-include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
+set(PICO_SDK_PATH ../../pico-sdk)
+include(pico_sdk_import.cmake)
 
 get_filename_component(PROJ_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
@@ -25,6 +26,8 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
 pico_sdk_init()
+
+set(SYS_CLK_MHZ 200) # set clock to 200MHz
 
 include_directories(
     ./include
