--- a/pico_console/driver/SD_SPI/CMakeLists.txt
+++ b/pico_console/driver/SD_SPI/CMakeLists.txt
@@ -6,6 +6,9 @@ set(OUTPUT_STATIC_LIB ${LIB_NAME})
 
 add_library(${OUTPUT_STATIC_LIB} ${LIB_NAME}.cpp)
 
+target_include_directories(${OUTPUT_STATIC_LIB} PUBLIC 
+  ${CMAKE_CURRENT_SOURCE_DIR}
+)
 target_link_libraries(${OUTPUT_STATIC_LIB}
   pico_stdlib
   hardware_spi
